feat: Use virtual threads in WebSocketBroadcastDemo for better concurrency